<resources>
    <string name="version">v2.0.3</string>
    <string name="app_name">Piebald</string>
    <string name="latest">Latest</string>
    <string name="buildings">Buildings</string>
    <string name="foodndrink">Food &amp; Drink</string>
    <string name="nature">Nature</string>
    <string name="people">People</string>
    <string name="technology">Technology</string>
    <string name="objects">Objects</string>
    <string name="featured">Featured</string>
    <string name="curated">Curated</string>
    <string name="photos">Photos</string>
    <string name="collections">Collections</string>

    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="sharr_to">Share To</string>
    <string name="wechat">WeChat</string>
    <string name="moments">Moments</string>
    <string name="details">Details</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="loading_failed">Loading Failed</string>
    <string name="nothing_loaded">Nothing Loaded Yet</string>
    <string name="exif">EXIF</string>
    <string name="make">CAMERA MAKE</string>
    <string name="model">CAMERA MODEL</string>
    <string name="aperture">APERTURE</string>
    <string name="shutter_speed">SHUTTER SPEED</string>
    <string name="focal_length">FOCAL LENGTH</string>
    <string name="iso">ISO</string>
    <string name="be_liked">Be liked</string>
    <string name="times">times</string>
    <string name="unknown">-</string>
    <string name="published_at">Published at </string>
    <string name="total_photos">Total photos : </string>
    <string name="wrong_network">Please check your network</string>
    <string name="wrong_message">Loading failed, something wrong with server or network.</string>
    <string name="wrong_path">Please choose a path within /storage/emulated/0</string>
    <string name="download_failure">Sorry, downloading image is unsupported for your device temporarily.</string>
    <string name="file_exists">This photo exists in downloading path</string>
    <string name="button_allow">Yes</string>
    <string name="button_deny">No</string>
    <string name="phone_permission_showRationale">Please grant Phone permission for this app to work better</string>
    <string name="storage_permision_showRationale">You could not download pictures without the permission, continue to grant?</string>
    <string name="no_permisson_toast">You need to grant the Storage permisson in Setting -> Apps -> Permissions</string>
    <string name="no_photo_tip">There is nothing here</string>
    <string name="path">Downloading Path</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="cache_size">Cache Size:</string>
    <string name="declaration">Declaration</string>
    <string name="declaration_content">&#160;&#160;&#160;&#160;Piebald is an application for development practice. All
        pictures and related information are provided by Unsplash.com. </string>
    <string name="feedback_subject">What problem do you want to report?</string>
    <string name="feedback_content">Describe your problem here, which will help us to improve Piebald</string>
    <string name="feedback_null_toast">The feedback description can not be empty</string>
    <string name="feedback_success">Submit successfully</string>
    <string name="feedback_fail">Submit fail</string>
    <string name="submit">Submit</string>
    <string name="about_me">About Me</string>
    <string name="developer">Developer:</string>
    <string name="developer_name">Black Zheng</string>
    <string name="email">Email:</string>
    <string name="email_add">blackzheng22@gmail.com</string>
    <string name="github">Github:</string>
    <string name="github_add">github.com/BlackZheng</string>
    <string name="donate">Donate</string>
    <string name="donate_requirement">Require Alipay</string>


    <string name="errcode_success">Sharing succeed</string>
    <string name="errcode_cancel">Sharing cancel</string>
    <string name="errcode_deny">Sharing rejected</string>
    <string name="errcode_unknown">Sharing return</string>
</resources>
