<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.blackzheng.me.piebald.ui.SettingActivity">
    <include layout="@layout/toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                android:padding="30dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:textSize="36sp"
                    android:text="@string/app_name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/version"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/first_title_style"
                    android:text="@string/declaration"
                    android:background="@drawable/border"/>
                <TextView
                    style="@style/second_title_style"
                    android:padding="16dp"
                    android:text="@string/declaration_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/first_title_style"
                    android:text="@string/about_me"
                    android:background="@drawable/border"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border">
                    <LinearLayout
                        android:id="@+id/developer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="developer">
                        <TextView
                            style="@style/second_title_style"
                            android:text="@string/developer"/>
                        <TextView
                            style="@style/second_title_style"
                            android:text="@string/developer_name"/>
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border">
                    <LinearLayout
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="email">
                        <TextView
                            style="@style/second_title_style"
                            android:text="@string/email"/>
                        <TextView
                            style="@style/second_title_style"
                            android:text="@string/email_add"/>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border">
                    <LinearLayout
                        android:id="@+id/github"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="github">
                        <TextView
                            style="@style/second_title_style"
                            android:text="@string/github"/>
                        <TextView
                            style="@style/second_title_style"
                            android:text="@string/github_add"/>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border">
                    <LinearLayout
                        android:id="@+id/donate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="donate">
                        <TextView
                            style="@style/second_title_style"
                            android:text="@string/donate"/>
                        <TextView
                            style="@style/second_title_style"
                            android:textSize="12sp"
                            android:text="@string/donate_requirement"/>
                    </LinearLayout>
                </RelativeLayout>



            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
