<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blackzheng.me.piebald.ui.PhotoDetailActivity">
    <include layout="@layout/toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.blackzheng.me.piebald.view.AdjustableImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="5dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:civ_border_width="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    app:civ_border_color="#33334C"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/default_profile"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:layout_toEndOf="@id/profile"
                    android:layout_toRightOf="@id/profile"
                    android:padding="5dp"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/photo_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:gravity="center"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:gravity="center" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical">
                    <!--<ImageView-->
                        <!--android:layout_width="30dp"-->
                        <!--android:layout_height="30dp"-->
                        <!--android:src="@mipmap/download"/>-->
                    <ImageButton
                        android:id="@+id/download"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/download"
                        android:background="?android:attr/selectableItemBackground"
                        android:adjustViewBounds="true" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:background="@drawable/border"
                    android:text="@string/exif"/>
                <LinearLayout
                    style="@style/exif_row_style">
                    <TextView
                        style="@style/exif_text_style"
                        android:text="@string/make" />
                    <TextView
                        style="@style/exif_text_style"
                        android:text="@string/model"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/exif_row_style">
                    <TextView
                        android:id="@+id/make"
                        style="@style/exif_content_style"
                        android:text="@string/unknown"/>
                    <TextView
                        android:id="@+id/model"
                        style="@style/exif_content_style"
                        android:text="@string/unknown"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/exif_row_style">
                    <TextView
                        style="@style/exif_text_style"
                        android:text="@string/aperture"/>
                    <TextView
                        style="@style/exif_text_style"
                        android:text="@string/shutter_speed"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/exif_row_style">
                    <TextView
                        android:id="@+id/aperture"
                        style="@style/exif_content_style"
                        android:text="@string/unknown"/>
                    <TextView
                        android:id="@+id/exposure_time"
                        style="@style/exif_content_style"
                        android:text="@string/unknown"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/exif_row_style">
                    <TextView
                        style="@style/exif_text_style"
                        android:text="@string/focal_length"/>
                    <TextView
                        style="@style/exif_text_style"
                        android:text="@string/iso"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/exif_row_style">
                    <TextView
                        android:id="@+id/focal_length"
                        style="@style/exif_content_style"
                        android:text="@string/unknown"/>
                    <TextView
                        android:id="@+id/iso"
                        style="@style/exif_content_style"
                        android:text="@string/unknown"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
